feat(dev-setup): add mariadb data volume to frappe

--- a/development_setup_vscode/.devcontainer/docker-compose.yml
+++ b/development_setup_vscode/.devcontainer/docker-compose.yml
@@ -10,5 +10,8 @@ services:
       - "3306:3306" #mysql
     command: ["/home/frappe/bench/entrypoint.sh"]
     volumes:
+      - frappe-mariadb-volume:/var/lib/mysql
       # for ease of copy file between docker container and host
       - ../shared_vscode_dev:/home/frappe/bench/apps/shared_vscode_dev
+volumes:
+  frappe-mariadb-volume:
