--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -20,15 +20,18 @@ jobs:
         python_version: [3.6]
         app_branch: [version-15]
     steps:
-      - name: Formatting and set version variable
-        working-directory: ./scripts
-        run: python tag_image.py
-
       - name: Generate action image tag
         run: echo "IMAGE_ACTION_TAG=${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ github.actor_id }}" >> $GITHUB_ENV
 
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Test
+        run: |
+          echo "helo" > version.txt
+
+      - name: Formatting and set version variable
+        run: python ./scripts/tag_image.py
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -53,13 +56,11 @@ jobs:
             APP_BRANCH=${{ matrix.app_branch }}
 
       - name: Getting app version from image
-        working-directory: ./scripts
         run: |
           docker run --rm ${{ env.IMAGE_ACTION_TAG }} bench version > version.txt
 
       - name: Formatting and set version variable
-        working-directory: ./scripts
-        run: python tag_image.py
+        run: python scripts/tag_image.py
 
       - name: Tag and push
         uses: docker/build-push-action@v5
