--- a/railway/temp_nginx.conf
+++ b/railway/temp_nginx.conf
@@ -7,8 +7,8 @@ upstream bench-socketio-server {
 }
 
 server {
-  listen 80 default_server;
-  server_name _;
+  listen 80;
+  server_name ${FRAPPE_DOMAIN_NAME};
   root /home/frappe/bench/sites;
 
   location /assets {
