feat: update var name

--- a/railway/temp_nginx.conf
+++ b/railway/temp_nginx.conf
@@ -8,7 +8,7 @@ upstream bench-socketio-server {
 
 server {
   listen 80;
-  server_name ${FRAPPE_DOMAIN_NAME};
+  server_name ${RFP_DOMAIN_NAME};
   root /home/frappe/bench/sites;
 
   location /assets {
