fix(railway): supervisor config

--- a/railway/temp_supervisor.conf
+++ b/railway/temp_supervisor.conf
@@ -32,7 +32,7 @@ directory=/home/frappe/bench
 killasgroup=true
 numprocs=3
 process_name=%(program_name)s-%(process_num)d
-environment=PATH="${PATH}",HOME="${HOME}"
+environment=PATH="${PATH}",HOME="/home/frappe"
 
 [program:bench-frappe-short-worker]
 command=/home/frappe/.local/bin/bench worker --queue short
@@ -47,7 +47,7 @@ directory=/home/frappe/bench
 killasgroup=true
 numprocs=3
 process_name=%(program_name)s-%(process_num)d
-environment=PATH="${PATH}",HOME="${HOME}"
+environment=PATH="${PATH}",HOME="/home/frappe"
 
 [program:bench-frappe-long-worker]
 command=/home/frappe/.local/bin/bench worker --queue long
@@ -62,7 +62,7 @@ directory=/home/frappe/bench
 killasgroup=true
 numprocs=3
 process_name=%(program_name)s-%(process_num)d
-environment=PATH="${PATH}",HOME="${HOME}"
+environment=PATH="${PATH}",HOME="/home/frappe"
 
 [program:bench-frappe-schedule]
 command=/home/frappe/.local/bin/bench schedule
@@ -73,7 +73,7 @@ stdout_logfile=/home/frappe/bench/logs/schedule.log
 stderr_logfile=/home/frappe/bench/logs/schedule.error.log
 user=frappe
 directory=/home/frappe/bench
-environment=PATH="${PATH}",HOME="${HOME}"
+environment=PATH="${PATH}",HOME="/home/frappe"
 
 [group:bench-workers]
 programs=bench-frappe-default-worker,bench-frappe-short-worker,bench-frappe-long-worker,bench-frappe-schedule
