--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -3,7 +3,7 @@ name: build-tag-push
 on:
   schedule:
     # At 00:00 on Sunday.
-    - cron: '0 0 * * 0'
+    - cron: "0 0 * * 0"
   push:
     branches:
       - master
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app_branch: [version-14, version-15]
+        app_branch: [version-14, version-15, version-16]
     steps:
       - name: Generate action image action tag
         run: echo "IMAGE_ACTION_TAG=${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ github.actor_id }}" >> $GITHUB_ENV
